kustomize/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: product-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: product
          image: 694030593525.dkr.ecr.ap-northeast-2.amazonaws.com/2002122067-product:replace-this
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 1000m
              memory: "1024Mi"
            requests:
              cpu: 300m
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
