kustomize/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "k8s-istiosys-ingressa-d8bb4db6a1-79597993.ap-northeast-2.elb.amazonaws.com"
